Fixed sign out wrapping to new line on smaller screens

--- a/public/css/mainscreenstyles.css
+++ b/public/css/mainscreenstyles.css
@@ -18,7 +18,7 @@ a:hover {
   display: flex;
   flex-direction: row;
   margin-bottom: 3%;
-  width: 35%;
+  width: 45%;
   margin-left: auto;
   margin-right: auto;
   justify-content: space-evenly;
